# khess-svn

trunk/khess/: AUTHORS  Doxyfile  Makefile.in  TODO  configure  configure.in  configure.in.in  configure.rb
trunk/khess/doc/: Makefile.am  Makefile.in
trunk/khess/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/khess/po/: Makefile.in
trunk/khess/src/: Makefile.am  Makefile.in  config.pri  khboardview.cpp  khboardview.h  khboardview.moc.cpp  khess.cpp  khess.desktop  khess.h  khess.lsm  khessiface.h  khessui.rc  khlogin.cpp  khlogin.h  khmatchdialog.cpp  khplayerinfobox.h  khplayersstatus.h  khselectuser.cpp  khselectuser.h  main.cpp  pref.h  src.pro
trunk/khess/src/board/: board.pro  boarditem.cpp  boarditem.h  boardview.cpp  boardview.h  pieceitem.cpp  pieceitem.h
trunk/khess/src/boards/: Makefile.am  Makefile.in  khboard2d.cpp  khboard2d.h  khboard2d.moc.cpp  khboardbase.cpp  khboardbase.h  khimagemanager.cpp  khimagemanager.h  khpromotiondialog.cpp  khpromotiondialog.h
trunk/khess/src/clocks/: Makefile.am  Makefile.in  khclock.cpp  khclock.h  khsimpleclock.cpp  khsimpleclock.h
trunk/khess/src/data/: Makefile.am  Makefile.in
trunk/khess/src/dlib/dgui/: dgui.pro
trunk/khess/src/dlib/plugins/dgstengine/: dgstengine.pro
trunk/khess/src/dlslib/: Makefile.am  button.cpp  button.h  buttonbar.cpp  clicklineedit.cpp  clicklineedit.h  close.xpm  ddockwindow.cpp  ddockwindow.h  dlistwidget.cpp  dlistwidget.h  dmainwindow.cpp  dmainwindow.h  docksplitter.cpp  dtable.cpp  dtable.h  dtabwidget.cpp  dwidgetbase.cpp  dwidgetbase.h  erase.xpm
trunk/khess/src/game/: Makefile.am  Makefile.in  board.cpp  board.h  common.cpp  common.h  figure.cpp  figure.h  game.cpp  game.h  game.pro  history.cpp  history.h  khchessmove.cpp  khchessmove.h  khficsmove.cpp  khficsmove.h  khgame.cpp  khgame.h  khmatch.cpp  khmatch.h  move.cpp  move.h  movelist.h  position.cpp  position.h
trunk/khess/src/interfaces/: engineinterface.cpp  engineinterface.h  interface.cpp  interface.h  interfacefactory.h  interfaces.pro  internetinterface.cpp  internetinterface.h
trunk/khess/src/iointerfaces/: Makefile.am  Makefile.in  khengineiointerface.cpp  khengineiointerface.h  khinternetiointerface.cpp  khinternetiointerface.h
trunk/khess/src/lib/: Makefile.am  Makefile.in  clicklineedit.cpp  clicklineedit.h  khapp.cpp  khapp.h  khgame.moc.cpp  khhtmlpage.cpp  khhtmlpage.h  khiointerface.cpp  khiointerface.h  khpageview.cpp  khpageview.h  khselectfacebutton.cpp  khselectfacebutton.h  khwebbrowser.cpp  khwebbrowser.h  kltable.cpp  kltable.h  lib.pri  lib.pro  ltlistview.cpp  ltlistview.h
trunk/khess/src/modules/: Makefile.am  Makefile.in  modules.pri  modules.pro  modules_config.pri
trunk/khess/src/modules/database/: Makefile.am  Makefile.in  database.cpp  database.h  database.pro  databaseinfo.cpp  databaseinfo.h  engine.h  filter.h  filtermodel.cpp  filtermodel.h  index.cpp  index.h  indexitem.cpp  indexitem.h  khdatabasewidget.cpp  khdatabasewidget.h  output.cpp  output.h  pgndatabase.cpp  pgndatabase.h  playerdata.h  search.cpp  search.h  uciengine.cpp  uciengine.h  wbengine.cpp  wbengine.h
trunk/khess/src/modules/internet/: Makefile.am  Makefile.in  internet.pro  khchatwindow.cpp  khchatwindow.h  khconnectiondialog.cpp  khconnectiondialog.h  khconsole.cpp  khconsole.h  khinternetwidget.cpp  khinternetwidget.h  khnicklist.cpp  khnicklist.h  khseektab.cpp  khseektab.h  khtextbox.cpp  khtextbox.h
trunk/khess/src/parsers/: Makefile.am  Makefile.in  khengineparser.cpp  khengineparser.h  khficsparser.cpp  khficsparser.h  khparserbase.cpp  khparserbase.h
trunk/khess/src/players/: Makefile.am  Makefile.in  khnewplayer.cpp  khnewplayer.h  khwarrior.cpp  khwarrior.h  khwarriorbase.cpp  khwarriorbase.h
trunk/khess/src/shell/: connectdialog.cpp  connectdialog.h  engineinterface.cpp  engineinterface.h  gamemanager.cpp  gamemanager.h  interfacefactory.cpp  interfacefactory.h  khboardview.h  khess.cpp  khess.h  khlogin.h  khmatchdialog.h  khplayerinfobox.cpp  khplayersstatus.cpp  khplayersstatus.moc.cpp  khseek.cpp  khseek.h  khselectuser.cpp  khselectuser.h  main.cpp  matchdialog.cpp  matchdialog.h  pref.cpp  shell.pro  shell_config.pri
