INCLUDES = -I$(top_srcdir)/src/boards -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
iconsdir = $(kde_datadir)/khess/icons


cursorsdir = $(kde_datadir)/khess/cursors
icons_DATA = folder_blue_open.png folder_blue.png folder_green_open.png \
	folder_green.png folder_open.png folder.png folder_red_open.png folder_red.png \
	folder_yellow_open.png folder_yellow.png folder_blue_open.png folder_blue.png \
	folder_green_open.png folder_green.png folder_open.png folder.png folder_red_open.png \
	folder_red.png folder_yellow_open.png folder_yellow.png

cursors_DATA = hand.png
