INCLUDES = -I$(top_srcdir)/src/boards -I$(top_srcdir)/src/clocks 	-I$(top_srcdir)/src/data -I$(top_srcdir)/src/database -I$(top_srcdir)/src/game 	-I$(top_srcdir)/src/lib -I$(top_srcdir)/src/players $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libiointerfaces.a
noinst_HEADERS = khinternetiointerface.h khengineiointerface.h
libiointerfaces_a_SOURCES = khinternetiointerface.cpp khengineiointerface.cpp
