INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libkh.a
noinst_HEADERS = khapp.h khiointerface.h kltable.h clicklineedit.h ltlistview.h \
	khselectfacebutton.h khpageview.h khhtmlpage.h khwebbrowser.h
libkh_a_SOURCES = khapp.cpp khiointerface.cpp kltable.cpp clicklineedit.cpp \
	ltlistview.cpp khselectfacebutton.cpp khpageview.cpp khhtmlpage.cpp khwebbrowser.cpp
