INCLUDES = -I$(top_srcdir)/src/boards -I$(top_srcdir)/src/clocks -I$(top_srcdir)/src/data -I$(top_srcdir)/src/database -I$(top_srcdir)/src/game -I$(top_srcdir)/src/iointerfaces -I$(top_srcdir)/src/lib -I$(top_srcdir)/src/players $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libparsers.a
noinst_HEADERS = khparserbase.h khficsparser.h khengineparser.h
libparsers_a_SOURCES = khparserbase.cpp khficsparser.cpp khengineparser.cpp
