INCLUDES = -I$(top_srcdir)/src/boards -I$(top_srcdir)/src/clocks \
	-I$(top_srcdir)/src/database -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libplayers.a
libplayers_a_SOURCES = khwarriorbase.cpp khwarrior.cpp khnewplayer.cpp
noinst_HEADERS = khwarriorbase.h khwarrior.h khnewplayer.h
facesdir = $(kde_datadir)/khess/faces/
faces_DATA = default1.png default2.png default3.png
